# acp-spec

./: .acp.config.json  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docs  index.html
.claude/commands/: acp.cli-audit-directives.md  acp.cli-remediate.md  acp.cli-verify.md  acp.daemon-document.md  acp.daemon-evaluate.md  acp.spec-audit-directives.md  acp.spec-clarify.md  acp.spec-remediate.md  acp.spec-verify-cache.md  rfc.analyze.md  rfc.check.md  rfc.finalize.md  rfc.implement.md  rfc.refine.md  rfc.test.md  validate-schemas.md
.claude/memory/: rfc-analysis-0002.md  rfc-analysis-0003.md  rfc-analysis-0004.md  rfc-analysis-0005.md  rfc-analysis-0006-0007-0008-0009.md  rfc-analysis-0006.md  rfc-analysis-0007.md  rfc-check-0002.md  rfc-finalized-0002.md  rfc-finalized-0004.md  rfc-finalized-0006.md  rfc-finalized-0008.md  rfc-plan-0002.md  rfc-plan-0003.md  rfc-plan-0004.md  rfc-plan-0005.md  rfc-plan-0006.md  rfc-plan-0008.md  rfc-plan-0009.md  rfc-status-0005.md  rfc-status-0006.md  rfc-status-0008.md  rfc-status-0009.md  rfc-tasks-0002.md  rfc-tasks-0006.md  rfc-tasks-0008.md  rfc-tasks-0009.md  rfc-test-0002.md  rfc-test-0004.md  rfc-test-0006.md  rfc-test-0008.md
.claude/templates/: cli-directive-audit-report.md  rfc-analysis-template.md  rfc-check-report-template.md  rfc-implementation-status-template.md  rfc-plan-template.md  rfc-release-notes-template.md  rfc-test-report-template.md  spec-decisions.schema.json  spec-remediation-summary.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  rfc_proposal.yml
.github/workflows/: discord-webhook-test.yml  discord-webhook.yml  schemas.yml
acp-docs/: README.md  index.md
acp-docs/concepts/: acp-vs-mcp.md  acp-vs-rag.md  design-philosophy.md  why-acp.md
acp-docs/getting-started/: quickstart.md
acp-docs/guides/: annotating-your-codebase.md  index.md  integrating-with-cursor.md  protecting-critical-code.md
acp-docs/tooling/: cli.md  daemon.md  mcp-server.md  vscode.md
cli/: Cargo.toml  README.md  cliff.toml  release.toml
cli/docs/: TESTING_GUIDE.md
cli/src/: attempts.rs  cache.rs  config.rs  constraints.rs  error.rs  expand.rs  guardrails.rs  index.rs  lib.rs  main.rs  parse.rs  query.rs  scan.rs  schema.rs  vars.rs  watch.rs
cli/src/annotate/: analyzer.rs  mod.rs  suggester.rs  writer.rs
cli/src/annotate/converters/: docstring.rs  godoc.rs  javadoc.rs  jsdoc.rs  mod.rs  rustdoc.rs
cli/src/annotate/heuristics/: git.rs  mod.rs  naming.rs  path.rs  visibility.rs
cli/src/ast/: mod.rs  parser.rs
cli/src/ast/languages/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
cli/src/cache/: mod.rs  types.rs
cli/src/commands/: map.rs  migrate.rs  mod.rs  output.rs
cli/src/config/: mod.rs
cli/src/constraints/: enforcer.rs  guardrails.rs  mod.rs  types.rs
cli/src/git/: blame.rs  history.rs  mod.rs  repository.rs
cli/src/index/: indexer.rs  mod.rs
cli/src/parse/: mod.rs
cli/src/vars/: expander.rs  mod.rs  presets.rs  resolver.rs
cli/tests/: annotate_integration.rs  schema_validation.rs
cli/tests/fixtures/annotate/: Sample.java  sample.go  sample.py  sample.rs  sample.ts
cli/tests/fixtures/schemas/attempts/invalid/: bad-status.json  invalid-hash.json
cli/tests/fixtures/schemas/attempts/valid/: minimal.json  with-history.json
cli/tests/fixtures/schemas/cache/invalid/: bad-behavior.json  bad-language.json  missing-version.json
cli/tests/fixtures/schemas/cache/valid/: full.json  minimal.json
cli/tests/fixtures/schemas/config/invalid/: bad-lock-level.json
cli/tests/fixtures/schemas/config/valid/: full.json  minimal.json
cli/tests/fixtures/schemas/primer/invalid/: empty-formats.json  missing-sections.json
cli/tests/fixtures/schemas/primer/valid/: full.json  minimal.json
cli/tests/fixtures/schemas/sync/invalid/: bad-tool-name.json
cli/tests/fixtures/schemas/sync/valid/: full.json  minimal.json
cli/tests/fixtures/schemas/vars/invalid/: bad-type.json
cli/tests/fixtures/schemas/vars/valid/: full.json  minimal.json
docs/: daemon-architecture.md
docs/discord/: INDEX.md  README.md  bot-automation.md  bot-commands.md  content-calendar.md  growth-strategy.md  launch-checklist.md  moderation-guide.md  onboarding.md  welcome-messages.md
docs/integrations/: README.md
docs/rust-cli/: CLI-IMPLEMENTATION-GUIDE.md
primers/: primer.defaults.json  primers.md
rfcs/: README.md  TEMPLATE.md  rfc-0001-self-documenting-annotations.md  rfc-0002-documentation-references-and-style-guides.md  rfc-0003-annotation-provenance-tracking.md  rfc-0004-tiered-interface-primers.md  rfc-0005-cli-provenance-implementation.md  rfc-0006-documentation-system-bridging.md  rfc-0007-acp-complete-documentation-solution.md  rfc-0008-acp-type-annotations.md  rfc-0009-extended-annotation-types.md  rfc-0010-documentation-generator.md  rfc-0011-ide-lsp-integration.md  rfc-0012-builtin-templates-theming.md  rfc-0013-mcp-server-tool-completeness.md  rfc-0014-windows-service-support.md  rfc-0015-primer-redesign.md
rfcs/accepted/: rfc-0001-self-documenting-annotations.md
rfcs/proposed/: rfc-0002-documentation-references-and-style-guides.md  rfc-0003-annotation-provenance-tracking.md  rfc-001-self-documenting-annotations.md  rfc-0010-documentation-references-and-style-guides.md  rfc-0011-annotation-provenance-tracking.md
schemas/: README.md
schemas/v1/: attempts.schema.json  cache.schema.json  config.schema.json  primer.schema.json  sync.schema.json  vars.schema.json
scripts/: test-discord-webhook.sh
spec/: ACP-1.0.md
spec/chapters/: 01-introduction.md  02-terminology.md  03-cache-format.md  04-config-format.md  05-annotations.md  06-constraints.md  09-discovery.md  10-querying.md  11-tool-integration.md  12-versioning.md  13-debug-sessions.md  14-bootstrap.md  15-bridging.md  annotations.md  inheritance.md  vars.md
spec/docs/: cli-primer-reference.md
spec/examples/: complete.md  edge-cases.md  minimal.md
spec/grammar/: annotations-w3c.ebnf  annotations-w3c.railroad.svg.md
(+45 files in other folders)
